# qsquaremap

./: .gitignore  LICENSE  MANIFEST.in  README.md  demo.py  pyproject.toml  qsquaremap.epj
.github/workflows/: pypi-publish.yml
src/qsquaremap/: __init__.py  qsquaremap.py
