[build-system]
requires = [
    "setuptools",
    "wheel",
    ]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name =  "qsquaremap"
version =  "0.2"
description = 'Hierarchical visualization widget QSquareMap for PyQt and PySide'
license = {file = "LICENSE"}
readme = "README.md"
authors = [{name = "Mikhail Terekhov", email = "termim@gmail.com"}]
maintainers = [{name = "Mikhail Terekhov", email = "termim@gmail.com"}]
keywords = ['PyQt', 'PySide']
requires-python = ">=3.9"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/termim/qsquaremap"
Repository = "https://github.com/termim/qsquaremap"
#Documentation = "http://qsquaremap.readthedocs.io"
"Bug Tracker" = "https://github.com/termim/qsquaremap/issues"
